--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,10 @@
 .icon{
   text-decoration: none;
 }
+.area {
+  display: table-cell;
+  margin: 0px;
+  border: solid black 1px;
+  height: 78px;
+  width: 78px;
+}
