--- a/css/app.css
+++ b/css/app.css
@@ -91,8 +91,8 @@
 }
 
 #area-info{
-  width: 750px;
-  margin-left: -375px;
+  width: 850px;
+  margin-left: -425px;
   margin-top: -50px;
 }
 
@@ -100,6 +100,10 @@
   cursor: pointer;
 }
 
-.building.selected{
+.placeable:hover{
   background-color: #3a3f44;
+}
+
+.modal-body{
+  height: 200px;
 }
